消除Maven构建警告